# Parallel-Computing-Challenges

./: .gitignore  CMakeLists.txt  LICENSE  README.md
challenge-1/: README.md
challenge-1/doc/: mergesort.tex
challenge-1/src/: Makefile  alternative-solution-parallel_merge_sort.cpp  mergesort.cpp  parallel_merge_sort.cpp  sequential_merge_sort.cpp  test.sh
challenge-2/: 2dConvOnda.cu  CMakeLists.txt  README.md
challenge-2/doc/: challenge-2.tex
challenge-2/src/: 2Dconv.cu  2d-convolution-basic.cu  2d-convolution-tiling.cu  2d-convolution.cu  challenge-2.ipynb  matrix-multiplication.cu
